2.0 unreleased
==============

- Use the INextPreviousProvider interface from plone.navigation.
  [hannosch]

- Import ISelectableConstrainTypes interface from plone.navigation.
  [hannosch]

- Removed inline-editing markup from default view templates.
  [hannosch]

- Don't assume regular (non-btree) folders for next/previous support.
  [witsch]

- Removed various dependencies on CMFPlone.
  [hannosch]

- Cleaned up tests some more. No longer rely on the testfixture extension
  profile but adapt the tests to default Plone instead.
  [hannosch]

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- Merged change r24257 from 3.2 branch of the event.pt view to use the new
  time_only prop so it gets correct localization of the times.  Closes
  http://dev.plone.org/plone/ticket/8607
  [jnelson, calvinhp]

- Changed parameter name at script getXMLSelectVocab.py from 'method' to 
  'vocab_method' to avoid getting overridden from ZPublisher.HTTPRequest.
  This closes http://dev.plone.org/plone/ticket/6960.
  [igbun]

- Adjusted subtopics listing to use the is_expired method from the context
  view instead of the former Python script.
  [hannosch]

- Moved default views for non-folderish content types to browser pages.
  [hannosch]

- Moved default public pages for all our content types over from CMFPlone.
  [hannosch]

- Changed description label to summary for page and news item. This closes
  http://dev.plone.org/plone/ticket/8700.
  [hannosch]

- Adjusted functional tests to not rely on login portlet.
  [hannosch]

- Moved a manage_renameObject method from the autosort code into the ordered
  base class. It wasn't quite obvious, but the code was actually used.
  [hannosch]

- Removed icalendar package from the thirdparty folder. We don't use it
  ourselves and it's easy installable nowadays for anyone who wants it.
  [hannosch]

- Removed the unmaintained atcontentypes.conf support.
  [hannosch]
