@@ -9,7 +9,7 @@
     <metal:main_macro define-macro="main"
          tal:define="DateTime python:modules['DateTime'].DateTime;
                      images python:here.atctListAlbum(images=1)['images'];
-                     Batch python:modules['Products.CMFPlone'].Batch;
+                     Batch python:modules['plone.sequencebatch'].Batch;
                      b_start python:request.get('b_start', 0);
                      batch python:Batch(images, 1, int(b_start), orphan=0);
                      image python:batch[0];
