@@ -32,12 +32,12 @@ setup(name='Products.ATContentTypes',
           'plone.i18n',
           'plone.memoize',
           'plone.navigation',
+          'plone.sequencebatch',
           'zope.component',
           'zope.i18nmessageid',
           'zope.interface',
           'zope.publisher',
           'zope.tal',
-          'Plone',
           'Products.Archetypes',
           'Products.ATReferenceBrowserWidget',
           'Products.CMFCore',
@@ -51,7 +51,7 @@ setup(name='Products.ATContentTypes',
           'Acquisition',
           'DateTime',
           'ExtensionClass',
-          # 'transaction',
+          'transaction',
           'ZODB3',
           'Zope2',
       ],
